--- a/estilo.css
+++ b/estilo.css
@@ -19,7 +19,7 @@ header{
 
 }
 .logo img{
-    height: 50px ;
+    height: 80px ;
     margin-right: 10px;
 }
 nav a{
@@ -28,4 +28,12 @@ nav a{
 }
 nav a:hover{
     color: aliceblue;
+}
+footer{
+    display: flex;
+    height: 50px;
+    background-color: blueviolet;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
 }
