--- a/estilo.css
+++ b/estilo.css
@@ -29,11 +29,23 @@ nav a{
 nav a:hover{
     color: aliceblue;
 }
-footer{
-    display: flex;
-    height: 50px;
+
+footer {
     background-color: blueviolet;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
+    color: #110c0c;
+    text-align: center;
+    padding: 20px 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+.footer-content {
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.footer-content p {
+    font-size: 16px;
+    margin: 5px 0;
 }
